Slider, Twitter Link, but no functionality yet to slider

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>VodaFlow</title>
 
 
-	<link rel="shortcut icon" href="/img/favicon.ico" />
+	<link rel="shortcut icon" href="/img/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
@@ -103,6 +103,22 @@
 			</div>
 		</section>
 
+		<section id="waterCalc" class="row">
+			<div class="col-md-12">
+				<h2 class="header">Calculate how much you could save!</h2>
+				<span class="results">Use the slider below!</span>
+
+				<div class="row">
+					<div class="col-md-11">
+						<input id="slider" type="range" min="0" max="60" value="30">
+					</div>
+					<div class="col-md-1">
+						<input id="slider-text" type="text" class="col-md-4" value="30">
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<!--<span class="msg">No requests yet!</span>
 
 		<table class="table table-hover">
@@ -136,7 +152,7 @@
 		<div class="col-md-4">
 			<div class="social">
 				<a href="http://fb.me/thevodaflow" target="_blank"><img src= "/img/social/fb.png"></a>
-				<a href="#" target="_blank"><img src= "/img/social/twitter.png"></a>
+				<a href="http://twitter.com/VodaFlow" target="_blank"><img src= "/img/social/twitter.png"></a>
 				<a href="mailto:contact@thevodaflow.com"><img src= "/img/social/mail.png"></a>
 			</div>
 		</div>
