--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="col-md-12">
 				<h2 class="header">Sign up for our Mailing List</h2>
 				<span class="result hidden">Thank you!</span>
-				<form id="mailingListForm" class="input-button animation-element slide-up">
+				<form id="mailingListForm" class="input-button animation-element slide-up form-group">
 					<input type="text" name="email" placeholder="Email Address" class="mailingListInput">
 					<button type="submit">Sign Up</button>
 				</form>
